fix: overflow-x hidden

--- a/style.css
+++ b/style.css
@@ -66,10 +66,12 @@
 html {
     scroll-behavior: smooth;
     scroll-padding-top: 110px;
+    overflow-x: hidden;
 }
 
 body {
     background-color: #FFFFFF;
+    overflow-x: hidden;
     /* background-image: url(assets/bg/topographic-bg.svg);
     background-position: 50%;
     background-size: 50%; */
